# msckf

./: .clang-format  .gitignore  CMakeLists.txt  README.md
homeworks/: ml_2021_spring_hw1.ipynb  ml_2021_spring_hw2.ipynb
script/: combine_video_subtitles.py
src/app/: main.cpp
src/params/: imu_params.h  params.h  sim_params.h
src/sim/: bspline_se3.cpp  bspline_se3.h  simulator.cpp  simulator.h
src/state/: propagator.cpp  propagator.h  state.h
src/utils/: common_math.h  dataset_reader.h  log.h  sensor_data.h
